# gst-vosk

./: AUTHORS  COPYING  README.md  gst-vosk.spec  lockless.patch  meson.build
po/: POTFILES  fr.po  gst-vosk.pot  meson.build
src/: gstvosk.c  gstvosk.h  meson.build
vosk/: meson.build
